--- a/vignettes/ActivePathways-vignette.Rmd
+++ b/vignettes/ActivePathways-vignette.Rmd
@@ -285,6 +285,77 @@ length(directional_conflict_genes)
 
 To visualise differences in biological pathways between ActivePathways analyses with or without a directional penalty, we combine both outputs into a single enrichment map for [plotting](#visualizing-directional-impact-with-node-borders).
 
+```{r}
+## 
+# 1) Write the aggregated pathways txt file 
+##
+df_txtpathways <- data.frame(term_id = c(enriched_pathways$term_id,enriched_pathways_directional$term_id),
+                             term_name = c(enriched_pathways$term_name,enriched_pathways_directional$term_name),
+                             adjusted_p_val = c(enriched_pathways$adjusted_p_val,enriched_pathways_directional$adjusted_p_val))
+pathways_txt = aggregate(x = adjusted_p_val ~ term_id + term_name, 
+          data = df_txtpathways, 
+          FUN = function(x){
+            c(min = min(x))
+          })
+pathways_txt <- as.data.table(pathways_txt)
+utils::write.table(pathways_txt, 
+                   file="Aggregated_pathways.txt", 
+                   row.names=FALSE, 
+                   sep="\t", 
+                   quote=FALSE)
+
+##
+# 2) Write the aggregated gmt file
+##
+gmt_main <- read.GMT(fname_GMT2)
+gmt_main <- gmt_main[pathways_txt$term_id]
+write.GMT(gmt_main,"Aggregated_pathways.gmt")
+
+## 
+# 3) Write the aggregated subgroups txt file 
+##
+col_colors <- c("#FF0000","#00FF00","#FFFFF0")
+tests <- c('rna','protein','combined')
+
+# aggregate the pathways and dataset contributions across both methods
+all_pathways <- data.frame(term_id = c(enriched_pathways$term_id, enriched_pathways_directional$term_id))
+evidence <- append(enriched_pathways$evidence, enriched_pathways_directional$evidence)
+all_pathways$evidence <- evidence
+term_ids <- unique(all_pathways$term_id)
+evidence_grouped <- lapply(term_ids, function(id) {all_pathways$evidence[all_pathways$term_id == id]})
+col_significance <- data.frame(term_id = term_ids, stringsAsFactors = FALSE)
+col_significance$evidence <- lapply(evidence_grouped, '[[', 1)
+evidence_columns = do.call(rbind, lapply(col_significance$evidence,
+                                         function(x) 0+(tests %in% x)))
+col_significance = cbind(col_significance[,"term_id"], evidence_columns)
+col_significance <- as.data.frame(col_significance)
+colnames(col_significance) = c("term_id",tests)
+
+# check for lost, gained, and shared pathways between methods
+lostp <- enriched_pathways$term_id[!enriched_pathways$term_id %in% enriched_pathways_directional$term_id]
+gainedp <- enriched_pathways_directional$term_id[!enriched_pathways_directional$term_id %in% enriched_pathways$term_id]
+sharedp <- enriched_pathways$term_id[enriched_pathways$term_id %in% enriched_pathways_directional$term_id]
+col_significance$directional_impact <- 0
+col_significance[col_significance$term_id %in% lostp,]$directional_impact <- 1
+col_significance[col_significance$term_id %in% gainedp,]$directional_impact <- 2
+col_significance <- as.data.table(col_significance)
+
+# add the instruct string for cytoscape
+instruct.str <- paste('piechart:',
+                      ' attributelist="', 
+                      paste(tests, collapse=','),
+                      '" colorlist="', 
+                      paste(col_colors, collapse=','), 
+                      '" showlabels=FALSE', sep='')
+col_significance[, "instruct" := instruct.str]
+utils::write.table(col_significance, 
+                   file="Aggregated_subgroups.txt", 
+                   row.names=FALSE, 
+                   sep="\t", 
+                   quote=FALSE)
+
+```
+
 ## Significance threshold and returning all results
 
 A pathway is considered to be significantly enriched if it has `adjusted_p_val <= significant`. The parameter `significant` represents the maximum adjusted P-value for a resulting pathway to be considered statistically significant. Only the significant pathways are returned. P-values from pathway enrichment analysis are adjusted for multiple testing correction to provide a more conservative analysis (see below).
