Tutorials and instructions added to readme and vignette

--- a/vignettes/ActivePathways-vignette.Rmd
+++ b/vignettes/ActivePathways-vignette.Rmd
@@ -283,77 +283,65 @@ pathway_gene_directions[directional_conflict_genes,]
 length(directional_conflict_genes)
 ```
 
+## Comparing standard and directional pathway analysis
+
 To visualise differences in biological pathways between ActivePathways analyses with or without a directional penalty, we combine both outputs into a single enrichment map for [plotting](#visualizing-directional-impact-with-node-borders).
 
+To explore how changes on the individual gene level impact biological pathways, we can compare results before and after incorporating a directional penalty.
+
 ```{r}
-## 
-# 1) Write the aggregated pathways txt file 
-##
-df_txtpathways <- data.frame(term_id = c(enriched_pathways$term_id,enriched_pathways_directional$term_id),
-                             term_name = c(enriched_pathways$term_name,enriched_pathways_directional$term_name),
-                             adjusted_p_val = c(enriched_pathways$adjusted_p_val,enriched_pathways_directional$adjusted_p_val))
-pathways_txt = aggregate(x = adjusted_p_val ~ term_id + term_name, 
-          data = df_txtpathways, 
-          FUN = function(x){
-            c(min = min(x))
-          })
-pathways_txt <- as.data.table(pathways_txt)
-utils::write.table(pathways_txt, 
-                   file="Aggregated_pathways.txt", 
-                   row.names=FALSE, 
-                   sep="\t", 
-                   quote=FALSE)
+fname_GMT2 <- system.file("extdata", "hsapiens_REAC_subset2.gmt", 
+        package = "ActivePathways")
 
-##
-# 2) Write the aggregated gmt file
-##
-gmt_main <- read.GMT(fname_GMT2)
-gmt_main <- gmt_main[pathways_txt$term_id]
-write.GMT(gmt_main,"Aggregated_pathways.gmt")
+# Perform integrative pathway enrichment analysis with no directionality
+enriched_pathways <- ActivePathways(
+        pval_matrix, gmt = fname_GMT2, cytoscape_file_tag = "Original_")
 
-## 
-# 3) Write the aggregated subgroups txt file 
-##
-col_colors <- c("#FF0000","#00FF00","#FFFFF0")
-tests <- c('rna','protein','combined')
+# Perform directional integration and pathway enrichment analysis
+constraints_vector <- c(1,1)
+constraints_vector
+dir_matrix[example_genes,]
 
-# aggregate the pathways and dataset contributions across both methods
-all_pathways <- data.frame(term_id = c(enriched_pathways$term_id, enriched_pathways_directional$term_id))
-evidence <- append(enriched_pathways$evidence, enriched_pathways_directional$evidence)
-all_pathways$evidence <- evidence
-term_ids <- unique(all_pathways$term_id)
-evidence_grouped <- lapply(term_ids, function(id) {all_pathways$evidence[all_pathways$term_id == id]})
-col_significance <- data.frame(term_id = term_ids, stringsAsFactors = FALSE)
-col_significance$evidence <- lapply(evidence_grouped, '[[', 1)
-evidence_columns = do.call(rbind, lapply(col_significance$evidence,
-                                         function(x) 0+(tests %in% x)))
-col_significance = cbind(col_significance[,"term_id"], evidence_columns)
-col_significance <- as.data.frame(col_significance)
-colnames(col_significance) = c("term_id",tests)
+enriched_pathways_directional <- ActivePathways(
+        pval_matrix, gmt = fname_GMT2, cytoscape_file_tag = "Directional_", merge_method = "DPM",
+        scores_direction = dir_matrix, constraints_vector = constraints_vector)
+```
 
-# check for lost, gained, and shared pathways between methods
-lostp <- enriched_pathways$term_id[!enriched_pathways$term_id %in% enriched_pathways_directional$term_id]
-gainedp <- enriched_pathways_directional$term_id[!enriched_pathways_directional$term_id %in% enriched_pathways$term_id]
-sharedp <- enriched_pathways$term_id[enriched_pathways$term_id %in% enriched_pathways_directional$term_id]
-col_significance$directional_impact <- 0
-col_significance[col_significance$term_id %in% lostp,]$directional_impact <- 1
-col_significance[col_significance$term_id %in% gainedp,]$directional_impact <- 2
-col_significance <- as.data.table(col_significance)
+### Merging results for visualization in Cytoscape
 
-# add the instruct string for cytoscape
-instruct.str <- paste('piechart:',
-                      ' attributelist="', 
-                      paste(tests, collapse=','),
-                      '" colorlist="', 
-                      paste(col_colors, collapse=','), 
-                      '" showlabels=FALSE', sep='')
-col_significance[, "instruct" := instruct.str]
-utils::write.table(col_significance, 
-                   file="Aggregated_subgroups.txt", 
-                   row.names=FALSE, 
-                   sep="\t", 
-                   quote=FALSE)
+To visualize differences in biological pathways between ActivePathways analyses with or without a directional penalty, we can combine both outputs into a single enrichment map. The `merge_results` and `merge_gmt` functions make this process straightforward:
 
+```{r}
+# Merge the results from both analyses
+merged_results <- merge_results(
+  enriched_pathways, enriched_pathways_directional,
+  output_prefix = "Aggregated_",
+  col_colors = c("#FF0000", "#00FF00", "#FFFFF0")
+)
+
+# Create a filtered GMT file containing only the significant pathways
+merged_gmt <- merge_gmt(
+  gmt_file = fname_GMT2,
+  term_ids = merged_results$term_ids,
+  output_file = "Aggregated_pathways.gmt"
+)
+```
+
+This creates three files needed for Cytoscape visualization:
+1. `Aggregated_pathways.txt` - Combined significant pathways with p-values
+2. `Aggregated_subgroups.txt` - Information about which datasets support each pathway and directional impact
+3. `Aggregated_pathways.gmt` - A filtered GMT file containing only the significant pathways
+
+### Examining pathways affected by directional analysis
+
+Let's examine the pathways that are lost when directional information is incorporated in the data integration:
+
+```{r}
+pathways_lost_in_directional_integration = 
+        setdiff(enriched_pathways$term_id, enriched_pathways_directional$term_id)
+pathways_lost_in_directional_integration
+
+enriched_pathways[enriched_pathways$term_id %in% pathways_lost_in_directional_integration,]
 ```
 
 ## Significance threshold and returning all results
